# lifelog

./: .gitignore  00_🏠_Home.py  pyproject.toml  readme.md  requirements.txt  requirements1.txt  sleep_notes_PRIV.txt  streamlit_DEMO.py
.devcontainer/: devcontainer.json
Raw_CSVs/: sample_RAW_PUBLIC.csv
VS_Persistent/: figs_PUBL.pkl
catalogs/: Catalog_Audiobook.yaml  Catalog_Audiobook_test4.yaml  Catalog_Food.yaml  Catalog_Food_test4.yaml  Catalog_Food_test5.yaml  Catalog_Movie.yaml  Catalog_Movie_test4.yaml  Catalog_Movie_test5.yaml  Catalog_Podcast.yaml  Catalog_Podcast_test4.yaml  Catalog_Podcast_test5.yaml  Catalog_SubjectMatter.yaml  Catalog_TVShow.yaml  Catalog_TVShow_test4.yaml  Catalog_TVShow_test5.yaml  Genres.py  SocialGroups.py  fix_yaml.py
external_modules/: kiwilib.py
i18n_l10n/: babel.cfg  babel_compile.bat  babel_extract.bat  babel_intermediate.txt  babel_update.bat  internationalization.py
pages/: 10_Metaprojects.py  10_🔝_Metaprojects.py  20_😴_Sleep.py  40_People.py  40_👨‍👩‍👧._People.py  40_👨‍👩‍👧_People.py  60_📚_Subjects.py
scripts/: DataCorrection.py  Exhibit.py  FileManagement.py  MAIN.py  Preprocess.py  Visualize.py
src/: BodyPartsUsage.py  Catalogs.py  Collectibles.py  Description.py  DescriptionSTDLISTS.py  Task.py  TimePeriod.py  TimesheetDF.py  TimesheetDataset.py  TimesheetGlobals.py  Visualization.py  Visualizations.py
tests/: Test.py  Test2.py  profiler.py  testing_utils.py  unit_test_Catalog.py  unit_test_DAGCatalog_1rw.yml  unit_test_DAGCatalog_2.yaml  unit_test_DAGCatalog_2rw.yaml  unit_test_DAGCatalog_Food_missing_2.yml  (+4 more)
(+35 files in other folders)
