[tool.poetry]
name = "lifelog"
version = "0.1.0"
description = "Analysis of tabular lifelog data"
authors = ["aaron-sandoval <32021231+aaron-sandoval@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11.8,<3.13"
pandas = ">=1.5.2, <3"
aenum = "^3.1.15"
antlr4-python3-runtime = "^4.12.0"
anytree = "^2.8.0"
Babel = "^2.11.0"
matplotlib = "^3.6.2"
networkx = "^2.8.4"
seaborn = "^0.12.2"
streamlit = "^1.22.0"
yamlable = "^1.1.1"
PyYAML = "^6.0"
portion = "^2.4.0"
antlr4-tools = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
